:bug: header too long

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -12,7 +12,6 @@ Header
 
 header
 {
-    width: 100vw;
     height: 80px;
     display: flex;
     flex-wrap: wrap;
